[gd_scene load_steps=8 format=3 uid="uid://brrda866lga7a"]

[ext_resource type="Script" path="res://Scenes/catching_game.gd" id="1_ifqeg"]
[ext_resource type="Texture2D" uid="uid://kg5ow8xmuoah" path="res://Sprites/CatchingGame/outerCircleBorder.png" id="2_dtblr"]
[ext_resource type="Texture2D" uid="uid://c18uuowiqjuex" path="res://Sprites/CatchingGame/outercircle.png" id="3_pwfat"]
[ext_resource type="Texture2D" uid="uid://c4sw8uf01cfjf" path="res://Sprites/CatchingGame/InnerCircle.png" id="4_u85qu"]
[ext_resource type="Texture2D" uid="uid://b8c5xb4ljr7p4" path="res://Sprites/CatchingGame/arrow.png" id="5_umdod"]
[ext_resource type="Texture2D" uid="uid://bnadpud76cfna" path="res://Sprites/CatchingGame/heart_grey.png" id="6_jqkgm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnjj0"]
size = Vector2(3, 7)

[node name="CatchingGame" type="Node2D"]
position = Vector2(296, 188)
scale = Vector2(3, 3)
script = ExtResource("1_ifqeg")
rotation_speed = 100
rects_list = [[0.8, 90], [1.0, 240], [1.5, 0]]

[node name="OuterCircle" type="Sprite2D" parent="."]
texture = ExtResource("3_pwfat")

[node name="Rects" type="Node2D" parent="."]

[node name="OuterCircleBorder" type="Sprite2D" parent="."]
texture = ExtResource("2_dtblr")

[node name="InnerCircle" type="Sprite2D" parent="."]
texture = ExtResource("4_u85qu")

[node name="ArrowPivot" type="Node2D" parent="."]

[node name="Arrow" type="Sprite2D" parent="ArrowPivot"]
position = Vector2(0, -20)
texture = ExtResource("5_umdod")

[node name="ArrowCollider" type="Area2D" parent="ArrowPivot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowPivot/ArrowCollider"]
position = Vector2(0, -28.5)
shape = SubResource("RectangleShape2D_lnjj0")

[node name="ProgressBar" type="TextureProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.6667
offset_right = 36.0
offset_bottom = 35.3333
grow_horizontal = 2
grow_vertical = 2
value = 50.0
fill_mode = 3
texture_under = ExtResource("6_jqkgm")

[connection signal="area_entered" from="ArrowPivot/ArrowCollider" to="." method="_on_arrow_collider_area_entered"]
[connection signal="area_exited" from="ArrowPivot/ArrowCollider" to="." method="_on_arrow_collider_area_exited"]
